Add capital letters to placeholders

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div>
       <div class='form-row'>
         <label for='opening-size'>Opening Size</label>
-        <input id='opening-size' name='opening-size-width' type='text' placeholder="width" style="margin-bottom: 10px;"/>
-        <input id='opening-size' name='opening-size-height' class="opening-size-height" type='text' placeholder="height"/>
+        <input id='opening-size' name='opening-size-width' type='text' placeholder="Width" style="margin-bottom: 10px;"/>
+        <input id='opening-size' name='opening-size-height' class="opening-size-height" type='text' placeholder="Height"/>
       </div>
       <div class='form-row'>
         <div class='measurement'><label for="measurement">What is the measurement from the bottom 
